@@ -131,6 +131,9 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
+        </configuration>
       </plugin>
 
       <plugin>
